--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <br />
         <br />
         <br />
-        <img src="divider.png" style="width:100%" />
+        <div style="width: 100%; background-color: #81968f">
+            <img src="examples.png" style="width:50%" />
+        </div>
         <h1 style="margin-top:100px;">Check out all the products!</h1>
         <br />
         <br />
@@ -54,6 +56,20 @@
         <br />
         <br />
         <br />
+        <img src="divider.png" style="width:100%" />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <div style="width: 100%; background-color: #81968f">
+            <img src="feedback.png" style="width:50%" />
+        </div>
+        <br />
+        <img src="divider.png" style="width:100%" />
+        <br />
+        <p>That's all folks</p>
     </center>
     
 </body>
