--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
             <img src="feedback.png" style="width:50%" />
         </div>
         <br />
-        <img src="divider.png" style="width:100%" />
+        <br />
+        <br />
+        <br />
+        <br />
+        <img src="divider2.png" style="width:100%" />
         <br />
         <p>That's all folks</p>
     </center>
