--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
         <br />
         <br />
         <div style="width: 100%; background-color: #81968f">
-            <img src="feedback.png" style="width:50%" />
+            <img src="feedback.png" style="width:80%" />
         </div>
         <br />
         <br />
         <br />
         <br />
         <br />
-        <img src="divider2.png" style="width:100%" />
+        <img src="divider.png" style="width:100%" />
         <br />
         <p>That's all folks</p>
     </center>
