--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <br />
         <a href="tel:469-929-7074" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-phone"></i><p>469-929-7074</p></a>
         <br />
-        <a href="mailto:sophie@druckdruckgoose.com?subject=Druck%20Druck%20Goose%20Inquiry" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i><p>SOPHIE@druckdruckgoose.com</p></a>
+        <a href="mailto:contact@druckdruckgoose.com?subject=Druck%20Druck%20Goose%20Inquiry" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i><p>contact@druckdruckgoose.com</p></a>
         <br />
         <br />
         <br />
