--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <center>
         <img src="logo.png" style="width:200px;" />
         <a style="display:block; text-decoration:none;" href="https://www.instagram.com/druckdruckgoosejewelry/" target="_blank" rel="noopener noreferrer">
-            <p id="demo" style="color: #2c2c2c; text-decoration: none; font-size: 40px; padding-top:200px; padding-bottom:100px;"></p>
+            <p id="demo" style="color: #2c2c2c; text-decoration: none; font-size: 40px; padding-top:200px; padding-bottom:100px;">CLAY JEWELRY</p>
         </a>
         <a style="display:none;" href="https://www.etsy.com/shop/DruckDruckGoose" target="_blank" rel="noopener noreferrer">
             <img src="bannert.png" style="width:100%" />
