--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             if (distance < 0) {
                 clearInterval(x);
-                document.getElementById("demo").innerHTML = "Fall drop out now!";
+                //document.getElementById("demo").innerHTML = "Fall drop out now!";
             }
         }, 1000);
     </script>
